--- a/src/main/resources/templates/fragments/pagination.html
+++ b/src/main/resources/templates/fragments/pagination.html
@@ -1,5 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<div class="mt-3" th:fragment="page-navigation(url,page)" th:if="${page.totalPages > 0}">
+<div class="m-3" th:fragment="page-navigation(url,page)" th:if="${page.totalPages > 0}">
     <div class="row">
         <nav>
             <ul class="pagination ">
